k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet-service
  labels:
    app: wallet-service
  annotations:
    service.kubernetes.io/topology-aware-hints: auto
spec:
  selector:
    app: wallet-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
  internalTrafficPolicy: Local
